# swegon-mcp

./: .gitignore  Dockerfile  README.md  SKILL.md  config.example.yaml  docker-compose.yml  pyproject.toml  test_connection.py  test_local.py
.github/workflows/: ci.yml
swegon_mcp/: __init__.py  config.py  http_server.py  modbus_client.py  server.py  superwise_client.py
tests/: test_http_auth.py  test_integration.py  test_oauth.py  test_security.py  test_superwise_integration.py
