[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swegon-mcp"
version = "0.1.0"
description = "MCP server for controlling Swegon WISE ventilation systems via Modbus TCP"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pymodbus>=3.6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "starlette>=0.36",
    "uvicorn>=0.27",
    "httpx>=0.27",
]

[project.scripts]
swegon-mcp = "swegon_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-anyio>=0.0.0",
    "anyio[trio]>=4.0",
    "ruff>=0.3",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.anyio]
backends = ["asyncio"]
